--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,56 @@
 @import "tailwindcss";
 
+/* standard */
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+    /* global styles */
+  /* background */
+  --color1: #B9E6FF;
+  --color2: #551b14;
+  --color3: #8a7e72;
+  --color4: #06ba63;
+  /* font-color */
+  --color5: #090302; 
+  --font1: Arial;
 }
-
+/* dark-mode */
+@media (prefers-color-scheme: dark) {
+  :root {
+  /* background */
+  --color1: #090302;
+  /* font-color */
+  --color5: #B9E6FF;
+  }
+}
+/* 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-}
+} */
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  background: var(--color1);
+  color: var(--color5);
+  font-family: var(--font1)
+}
+
+#landing_header {
+  width: 100%;
+  height: 50px;
+  background-color: var(--color4);
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  gap: 20px;
+  font-size: 18px;
+}
+
+button {
+  border-radius: 12px;
+  background-color: var(--color2);
+  padding: 5px;
+  margin: 10px;
 }
