--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,6 +55,7 @@ button {
   margin: 10px;
 }
 /* LevelOverview */
+/* Width: widest element, maximum 70% */
 #level_container {
   display: flex;
   flex-direction: column;
