--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,14 +36,14 @@ body {
   font-family: var(--font1)
 }
 
-#landing_header {
+.header {
   width: 100%;
   height: 50px;
   background-color: var(--color4);
   text-align: center;
   display: flex;
   justify-content: center;
-  justify-items: center;
+  align-items: center;
   gap: 20px;
   font-size: 18px;
 }
