--- a/src/components/Matrix.css
+++ b/src/components/Matrix.css
@@ -1,33 +1,11 @@
-.matrix_wrapper {
-  display: inline-flex;
-  align-items: stretch;
-  margin: 0 auto;
-  justify-content: center;
-  /* border: 1px solid red; */
-  margin: 0 auto;
-}
 .matrix {
+  /* border: 1px solid red; */
+  text-align: center;
   margin: 10px;
-  /* border: 1px solid red; */
-  text-align: center;
-  border-collapse: collapse;
-  /* border: 1px solid red; */
-
+  font-size: 20px;
 }
-.matrix td{
-  /* border: 1px solid red; */
-  padding: 5px;
-  text-align: center;
-}
-
-svg {
-  height: auto;
-  /* border: 1px solid red; */
-  width: 25px;
-  align-self: stretch;
-}
-svg path {
-    stroke: var(--color5);
-    stroke-width: 2px;
-    fill: none;
+.katex .delimsizing {font-size: 1.1em;}
+.katex .mord {
+  margin-right: 0.1em; 
+  margin-left: 0.1em; 
 }
