--- a/src/components/Matrix.css
+++ b/src/components/Matrix.css
@@ -9,3 +9,35 @@
   margin-right: 0.1em; 
   margin-left: 0.1em; 
 }
+
+.matrix-container {
+  display: flex;
+  justify-content: center;
+}
+
+.matrix-inputs td {padding: 5px;}
+
+.matrix-inputs input {
+  width: 40px;
+  text-align: center;
+  border-radius: 12px;
+  background: var(--color1);
+  border: 3px solid var(--color5);
+  color: var(--color5);
+}
+
+.matrix-container {align-items: stretch;}
+
+/* no arrows in input */
+/* Chrome, Safari, Edge, Opera */
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+/* result-col line */
+.matrix-inputs td.result-col {
+  border-left: 2px solid var(--color5);
+  padding-left: 15px;
+}
+.matrix-inputs td.before-result-col {padding-right: 15px;}
