--- a/src/components/TutorialLevel.css
+++ b/src/components/TutorialLevel.css
@@ -1,20 +1,31 @@
 .toolbar {
-   /* display: flex; */
+  display: flex;
+  width: 100%;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
 }
-/* Hintergrundfarbe der ProgressBar */
+/* outside */
 .p-progressbar {
-  background-color: var(--color3); /* Hintergrund */
-  border-radius: 12px;    /* abgerundete Form */
-  margin: 20px;
+  background-color: var(--color2); 
+  border-radius: 12px;
+  flex: 1;
 }
-
-/* Farbe des Fortschrittsbalkens */
+/* inside */
 .p-progressbar .p-progressbar-value {
-  background-color: var(--color4); /* Grün */
-  border-radius: 12px;       /* gleiche Rundung */
+  background-color: var(--color4); 
+  border-radius: 12px;      
 }
-.p-progressbar .p-progressbar-label {
-  display: none;
+/* display percentage */
+.p-progressbar .p-progressbar-label {display: none;}
+
+button {
+  background: none;
+  border: none;
+  color: var(--color3);
+  padding: 0;
+  margin: 0;
 }
 
 .content{
@@ -23,10 +34,13 @@
     gap: 20px;
     margin: 20px;
     height: 70vh;
-    /* border: 1px solid gray; */
 }
 .navigator_btn {
-    text-align: center;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    gap: 20px;
+    width: 100%;
 }
 
 .titel {
