--- a/src/components/CalcButtons.css
+++ b/src/components/CalcButtons.css
@@ -72,7 +72,7 @@ button {
     color: var(--color5);
     border: none;
 }
-.scalar_input input {
+.scalar_input {
     width: 50px;
     border: 3px solid var(--color5);
 }
