--- a/src/components/CalcButtons.css
+++ b/src/components/CalcButtons.css
@@ -15,10 +15,8 @@ button {
     background-color: var(--color3);
     border-radius: 12px;
     padding: 20px;
-    display: inline-flex;
-    width: auto;
-    max-width: 90vw;
-    min-width: 250px;
+    height: 330px;
+    width: 330px;
 }
 .p-dialog .p-dialog-content {
     display: flex;
@@ -43,7 +41,10 @@ button {
     height: 100%;
 }
 .dialog_table {width: 100%;}
-.matrix-table th, .dialog_table td {padding: 8px;}
+.matrix-table th, .dialog_table td {
+    padding: 10px;
+    width: 80px;
+}
 
 
 .select_btn{
@@ -73,7 +74,8 @@ button {
     border: none;
 }
 .scalar_input {
-    width: 50px;
+    margin: 0;
+    width: 70px;
     border: 3px solid var(--color5);
 }
 .dialog_footer {
