--- a/src/components/TutorialLevel.css
+++ b/src/components/TutorialLevel.css
@@ -9,19 +9,23 @@ button {
 .content{
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+    width: fit-content;
+    max-width: 100%;
     gap: 20px;
-    margin: 20px;
+    margin: 20px auto;
+    margin-top: 0;
     height: 70vh;
-}
-.navigator_btn {
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    gap: 20px;
-    width: 100%;
+    overflow-y: auto;     /* vertical scrolling */
 }
 
 .titel {
     font-weight: bold;
     font-size: larger;
+}
+.titel, .text, .katex {
+    padding: 10px;
+}
+.katex {
+    display: inline-flex;
 }
