--- a/Webservice/src/styles/LevelOverview.css
+++ b/Webservice/src/styles/LevelOverview.css
@@ -4,9 +4,9 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  width: fit-content;
   max-width: 70%;
-  margin: 0 auto;
+  width: 330px;
+  margin: 4% auto;
 }
 .level_item {
   display: flex;
