styles: update color variables

--- a/Webservice/src/styles/globals.css
+++ b/Webservice/src/styles/globals.css
@@ -15,7 +15,7 @@
 .theme-blue{
   --color2: #7FB3FF;
   --color3: #1E4FA3;
-  --color4: #0D1B4C;
+  --color4: #152978;
 }
 .theme-green {
   --color2: #A5D6A7;
