--- a/Webservice/src/styles/LevelOverview.css
+++ b/Webservice/src/styles/LevelOverview.css
@@ -4,9 +4,9 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  width: fit-content;
   max-width: 70%;
-  margin: 0 auto;
+  width: 330px;
+  margin: 4% auto;
 }
 .level_item {
   display: flex;
@@ -31,7 +31,7 @@
 }
 .level_btn_top {
   background: var(--color3);
-  color: var(--color2);
+  color: var(--color5);
   font-size: 30px;
   display: flex;
   align-items: center;
@@ -42,7 +42,7 @@
 .level_btn_bottom {
   width: 100%;
   height: 100%;
-  background: var(--color2);
+  background: var(--color4);
   bottom: 39px;
   z-index: -1;
 }
