--- a/Webservice/src/styles/LevelTools.css
+++ b/Webservice/src/styles/LevelTools.css
@@ -18,7 +18,7 @@
     margin-bottom: 5px;
 }
 #continue_btn_0 {
-    background: var(--color3);
+    background: gray !important;
 }
 .feedback {
     display: flex;
