--- a/Webservice/src/styles/globals.css
+++ b/Webservice/src/styles/globals.css
@@ -72,3 +72,8 @@ button {
   color: var(--color2);
   padding: 5px;
 }
+
+.p-button:focus {
+  box-shadow: none !important;
+  outline: none !important;
+}
