--- a/Webservice/src/styles/CalcButtons.css
+++ b/Webservice/src/styles/CalcButtons.css
@@ -12,31 +12,19 @@ button {
     background: none;
 }
 .dialog {
-    background: var(--color3);
+    /* background: var(--color3); */
     border-radius: 12px;
     padding: 20px;
     height: fit-content;
-    width: 330px;
+    width: fit-content;
 }
-.dialog .p-dialog-content {background-color: var(--color3); }
-.dialog .p-dialog-header {
-  background-color: var(--color3); 
-  color: var(--color5);
-}
-.dialog .p-dialog-footer {background-color: var(--color3); }
-.p-dialog .p-dialog-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: var(--color5);
-}
+
 .p-icon{color: var(--color5);}
 .dialog :only-child {
     border-radius: 12px;
     text-align: center;
 }
 
-.dialog_table {width: 100%;}
 .matrix-table th, .dialog_table td {
     padding: 10px;
     width: 80px;
@@ -50,38 +38,109 @@ button {
     border-radius: 12px;
     background: none;
     padding: 0;
+    gap: 7px;
 }
 /* inactive button */
 .select_btn .p-button {
+    border: 3px solid color-mix(in srgb, var(--color5) 30%, transparent);
     flex: 1;
     width: 100%;
     box-sizing: border-box;
     border-radius: 12px;
-    background-color: var(--color2);
-    color: var(--color3); 
+    background-color: var(--color1);
+    color: color-mix(in srgb, var(--color5) 30%, transparent);
     transition: all 0.2s ease;
     padding: 0.5rem;
     margin: 0;
 }
 /* active button */
 .select_btn .p-button.p-highlight {
-    background: var(--color4);
-    color: var(--color5);
-    border: none;
+    border: 3px solid var(--color3);
+    background: color-mix(in srgb, var(--color3) 30%, transparent);
+    color: var(--color3);
 }
 .scalar_input {
     margin: 0;
+    text-align: center;
     width: 70px;
-    border: 3px solid var(--color5);
+    height: 30px;
+    border-radius: 10px;
+    outline: none;
 }
 .dialog_footer {
-    margin: 0 auto;
+    margin: 0;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 .dialog_footer button {
     border: 2px solid var(--color5);
     padding: 5px;
     font-size: small;
     color: var(--color5);
+}
+
+.arrow-wrapper {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.arrow-expression {
+  display: flex;
+  align-items: center;
+  gap: 2px;
+  font-size: 1.6rem;
+}
+.arrow-expression sub {
+    display: flex;
+    gap: 4px;
+}
+
+.expr-input {
+  width: 37px;
+  height: 23px;
+  text-align: center;
+  align-items: center;
+  border-radius: 10px;
+  border: 1px solid var(--color5);
+  background: none;
+  font-size: 1.2rem;
+  color: var(--color5);
+}
+.p-dropdown:focus{
+    outline: none;
+}
+.p-dropdown-label {
+    color: var(--color5);
+}
+.p-inputtext {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
+.p-dropdown-trigger {
+    width: fit-content;
+    margin-right: 1px;
+}
+
+
+.arrow-svg {
+  width: 100%;
+  height: 20px;
+}
+
+.arrow-svg-inner {
+  width: 100%;
+  height: 100%;
+}
+
+.arrow-line {
+  stroke: var(--color5);
+  stroke-width: 2;
+}
+
+.arrow-head {
+  fill: var(--color5);
 }
