fix: refit navigation buttons

--- a/Webservice/src/styles/LevelDesign.css
+++ b/Webservice/src/styles/LevelDesign.css
@@ -11,6 +11,7 @@
   .level-renderer-container {
     overflow: auto;
     min-height: 80vh;
+    padding-bottom: 12vh; /*Space for navigation buttons*/
   }
   .NavigationArrows {
     position: fixed;
